# dde-dock-privacy

./: .gitignore  CMakeLists.txt  README.md  devicemonitor.cpp  devicemonitor.h  privacy-indicator.json  privacy-indicator.qrc  privacyindicator.cpp  privacyindicator.h  privacyindicatorplugin.cpp  privacyindicatorplugin.h  privacywidget.cpp  privacywidget.h
.github/workflows/: build.yml  clang-format.yml
debian/: changelog  control  copyright
package/: metadata.json  privacyindicator.qml
